Make elements of zero width or height focusable https://bugs.webkit.org/show_bug.cgi?id=181516

Reviewed by Chris Dumez.

Source/WebCore:

Don't check render box's size or bounding rect when deciding whether an element is focusable.
New behavior matches that of Firefox and Chrome.

Test: fast/events/focus-zero-size-element.html

* dom/Element.cpp:
(WebCore::Element::isFocusable): Only update the style.
* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::isFocusable const): Deleted.
* html/HTMLFormControlElement.h:
* mathml/MathMLElement.cpp:
(WebCore::MathMLElement::isFocusable const): Deleted. As far as I can tell, no math ml element is focusable.
* mathml/MathMLElement.h:
* svg/SVGAElement.cpp:
(WebCore::SVGAElement::isFocusable const): Deleted.
* svg/SVGAElement.h:

LayoutTests:

Added a regression test.

* fast/events/focus-zero-size-element-expected.txt: Added.
* fast/events/focus-zero-size-element.html: Added.


Canonical link: https://commits.webkit.org/197435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226823 268f45cc-cd09-0410-ab3c-d52691b4dbfc